k8s/web-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"web-server-service","namespace":"default"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"web-server"},"type":"ClusterIP"}}
  creationTimestamp: "2026-05-15T02:46:02Z"
  name: web-server-service
  namespace: default
  resourceVersion: "2441423"
  uid: a945c3e5-907d-4446-a02a-845739c19d21
spec:
  clusterIP: 10.0.255.66
  clusterIPs:
  - 10.0.255.66
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
